chat bot settings

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_DEV_URL = http://localhost:3500
 REACT_APP_PROD_URL = https://api.example.com
 REACT_APP_ENV = dev
+
+GOOGLE_GEN_API_KEY = AIzaSyAi84Fs1ylNLjA0X_fb_bCEtLdyRR_DX2o
