--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
     "framer-motion": "^11.5.6",
+    "idb": "^8.0.0",
     "lightweight-charts": "^4.2.0",
+    "lucide-react": "^0.445.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -20,7 +22,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^5.0.0-rc.2"
   },
   "scripts": {
     "start": "react-scripts start",
